[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Artem Razmyslov <89083284426@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.0,<2.0.0)"
]

[tool.isort]
profile = "black"
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_sort_within_sections = true
line_length = 119
skip = [".git", ".venv", "venv", "__pycache__"]
combine_as_imports = true
known_first_party = ["homework"]
src_paths = ["src", "test"]

[tool.mypy]
python_version = "3.9"
show_error_codes = true
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
strict_optional = true
exclude = [".git", ".venv", "venv", "__pycache__"]

[tool.black]
line-length = 119
target-version = ['py39']
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.mypy_cache
  | \.pytest_cache
)/
'''